# hw07-metaprogramming

./: .gitignore  README.md  STUDENT.md  pyproject.toml
.github/workflows/: classroom.yml
hw07/: make_dataclass.py  orm.py
tests/: conftest.py  test_make_dataclass.py  test_orm.py
